# snorri_engine

./: .gitignore  CMakeLists.txt  README.md
SnorriEngineV1/: SnorriEngineV1.sln
SnorriEngineV1/SnorriEngineV1/: SnorriEngineV1.cpp  SnorriEngineV1.vcxproj  SnorriEngineV1.vcxproj.filters
SnorriEngineV1/SnorriEngineV1/x64/Debug/: SnorriEngineV1.exe.recipe  SnorriEngineV1.ilk  vc143.idb
SnorriEngineV1/SnorriEngineV1/x64/Debug/SnorriEngineV1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SnorriEngineV1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/data/: scene_start.json
assets/shaders/: box_physics_shader.glsl  fragment_shader.glsl  physics_shader.glsl  raymarch_2_shader.glsl  raymarch_shader.glsl  sdf.glsl  texture_shader.glsl  ui_fragment_shader.glsl  vertex_shader.glsl
src/: compute.cpp  compute.h  computephysics.cpp  computephysics.h  computesurface.cpp  computesurface.h  light.cpp  light.h  log.cpp  log.h  main.cpp  renderer.cpp  renderer.h  rendererui.cpp  rendererui.h  scene.cpp  scene.h  shader.cpp  shader.h  stb_image.cpp  time.cpp  time.h  window.cpp  window.h
src/camera/: camera.cpp  camera.h
src/file/: jdict.cpp  jdict.h  jsonloader.cpp  jsonloader.h  pathutils.cpp  pathutils.h
src/object/: component.cpp  component.h  object.cpp  object.h  point.cpp  point.h
src/physics/: body.cpp  body.h  bodybox.cpp  bodybox.h  physicsmanager.cpp  physicsmanager.h
src/surface/: surface.cpp  surface.h  surfacemanager.cpp  surfacemanager.h
